# kanban-board-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build-desktop.sh  network-current.txt  sbff24-detail-snapshot.md  skills-lock.json
.github/: copilot-instructions.md
.tmp/: qc-retest-4fixes.js  qc-wave2-report.json  qc-wave2-runner.js  qc-wave2.spec.js
desktop/: common_spec.py  kanban-mcp-stdio.spec  kanban-server.spec  main-helpers.js  main.js  package.json  (+3 more)
server/: .gitignore  README.md  alembic.ini  config.py  database.py  events.py  main.py  mcp_stdio.py  mcp_tools.py  models.py  pyproject.toml  seed.py  uploads.py
server/alembic/: env.py
server/alembic/versions/: 1e1bb4aa5fa4_merge_multiple_heads.py  46d50ad33691_fix_idea_status_and_color_values.py  551353060a20_initial_schema.py  8f3a9c2d1e4b_add_blocks_blocked_by.py  9a4b5c6d7e8f_fix_blocks_blocked_by_columns.py  a1b2c3d4e5f6_add_block_done_guards.py  a1b2c3d4e5f6_add_blocks_blocked_by.py  a2b3c4d5e6f7_add_idea_ticket_promoted_unique.py  b2c3d4e5f6a7_add_wont_do_reason.py  c3d4e5f6a7b8_add_members_and_ticket_assignee.py  d4e5f6a7b8c9_add_start_date.py  e5f6a7b8c9d0_add_links.py  f1a2b3c4d5e6_add_idea_ticket_table.py  f6a7b8c9d0e1_add_idea_board_fields.py
server/api/: data.py  idea_tickets.py  members.py  projects.py  settings.py  tickets.py
server/services/: idea_tickets.py  members.py  projects.py  tickets.py
server/tests/: test_database.py  test_idea_board_model.py  test_idea_board_tools.py  test_idea_tickets.py  test_main.py  test_mcp_tools.py  test_models.py  test_projects.py  test_tickets.py
(+197 files in other folders)
