[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pytest-asyncio>=1.3.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.43.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
